--- a/package.json
+++ b/package.json
@@ -1,20 +1,5 @@
 {
-  "name": "planning-poker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.3.0",
-    "@types/node": "^22.12.0",
-    "nodemon": "^3.1.9",
-    "prisma": "^6.3.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "uuid": "^11.0.5"
   }
 }
