--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "nanoid": "^5.0.9",
     "pg": "^8.13.1",
     "prisma": "^6.3.0"
   },
