--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.2",
     "nanoid": "^5.0.9",
     "pg": "^8.13.1",
-    "prisma": "^6.3.0"
+    "prisma": "^6.3.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
